# ASPEN

./: .gitignore  .gitmodules  Notes.md  Preparing_xavier.md  Preparing_xavier.sh  README.md  requirements.txt
Hardware/: Enssambling_box_instructions.md
Hardware/Files/: 20220324_bottom_left.stl  20220324_bottom_right.stl  20220324_handle.stl  20220324_handle_holder.gcode  20220324_handle_holder.stl  20220324_middle_left.stl  20220324_middle_right.stl  20220324_top_left.stl  20220324_top_right.stl
Hardware/Files/20220627_NVIDIA_Carrier/: Nvidia_carrier.stl  Nvidia_carrier_thicker.stl
Hardware/Notes/: 202203011_cable_connections.txt  20220308_3D_improvements_to_be_done.txt  20220313_screws.txt  20220315_hotshoe.txt  20220323_jetson_xavier_nx_BMI088.md  20220323_jetson_xavier_nx_GPIO.md  20220323_jetson_xavier_nx_PTP.md  20220323_jetson_xavier_nx_SONY.md
Software/: main.py  requirements.txt
Software/ROS/devel/: .catkin  .rosinstall
Software/ROS/install/: local_setup.sh  setup.sh
Software/ROS/src/bmi088/: CMakeLists.txt
Software/ROS/src/bmi088/scripts/: imu.py
Software/ROS/src/bmi088/src/: Makefile  bmi088_2ROS.cpp  print_bmi088.c
Software/ctrl/: Agroscope_app.sh  Agroscope_startup.sh
Software/ctrl/debug/: 20220419_RS_configuration.md  Agroscope_preview.py  Agroscope_preview.sh  Camera_parameters.txt  TEST_ALTUM.py  (+4 more)
Software/lib/: helpers.py  sensors.py  yolov5
Software/models/: Apple.pt  Tomato.pt
Software/transfer/: 01-network-manager-all.yaml  Agroscope.desktop  Agroscope.service  Agroscope_patch.desktop  rs_agroscope.launch  ~Desktop
(+58 files in other folders)
